Turn on vertical scroll to avoid page jumps

--- a/src/reset.css
+++ b/src/reset.css
@@ -111,3 +111,5 @@ body {
 
 	font-size: 16px;
 }
+
+html { overflow-y: scroll; }
